@@ -19,9 +19,7 @@
 
 package org.apache.druid.indexing.kafka;
 
-import com.google.common.base.Strings;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
+import org.apache.druid.error.DruidException;
 import org.apache.druid.java.util.emitter.service.ServiceEmitter;
 import org.apache.druid.java.util.emitter.service.ServiceMetricEvent;
 import org.apache.druid.java.util.metrics.AbstractMonitor;
@@ -33,22 +31,83 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class KafkaConsumerMonitor extends AbstractMonitor
 {
   private volatile boolean stopAfterNext = false;
 
-  // Kafka metric name -> Druid metric name
-  private static final Map<String, String> METRICS =
-      ImmutableMap.<String, String>builder()
-                  .put("bytes-consumed-total", "kafka/consumer/bytesConsumed")
-                  .put("records-consumed-total", "kafka/consumer/recordsConsumed")
-                  .build();
-  private static final String TOPIC_TAG = "topic";
-  private static final Set<String> TOPIC_METRIC_TAGS = ImmutableSet.of("client-id", TOPIC_TAG);
+  private static final String CLIENT_ID_TAG = "client-id";
+
+  // Kafka metric name -> Kafka metric descriptor
+  private static final Map<String, KafkaConsumerMetric> METRICS =
+      Stream.of(
+          new KafkaConsumerMetric(
+              "bytes-consumed-total",
+              "kafka/consumer/bytesConsumed",
+              Set.of(CLIENT_ID_TAG, "topic"),
+              KafkaConsumerMetric.MetricType.COUNTER
+          ),
+          new KafkaConsumerMetric(
+              "records-consumed-total",
+              "kafka/consumer/recordsConsumed",
+              Set.of(CLIENT_ID_TAG, "topic"),
+              KafkaConsumerMetric.MetricType.COUNTER
+          ),
+          new KafkaConsumerMetric(
+              "fetch-total",
+              "kafka/consumer/fetch",
+              Set.of(CLIENT_ID_TAG),
+              KafkaConsumerMetric.MetricType.COUNTER
+          ),
+          new KafkaConsumerMetric(
+              "fetch-rate",
+              "kafka/consumer/fetchRate",
+              Set.of(CLIENT_ID_TAG),
+              KafkaConsumerMetric.MetricType.GAUGE
+          ),
+          new KafkaConsumerMetric(
+              "fetch-latency-avg",
+              "kafka/consumer/fetchLatencyAvg",
+              Set.of(CLIENT_ID_TAG),
+              KafkaConsumerMetric.MetricType.GAUGE
+          ),
+          new KafkaConsumerMetric(
+              "fetch-latency-max",
+              "kafka/consumer/fetchLatencyMax",
+              Set.of(CLIENT_ID_TAG),
+              KafkaConsumerMetric.MetricType.GAUGE
+          ),
+          new KafkaConsumerMetric(
+              "fetch-size-avg",
+              "kafka/consumer/fetchSizeAvg",
+              Set.of(CLIENT_ID_TAG, "topic"),
+              KafkaConsumerMetric.MetricType.GAUGE
+          ),
+          new KafkaConsumerMetric(
+              "fetch-size-max",
+              "kafka/consumer/fetchSizeMax",
+              Set.of(CLIENT_ID_TAG, "topic"),
+              KafkaConsumerMetric.MetricType.GAUGE
+          ),
+          new KafkaConsumerMetric(
+              "records-lag",
+              "kafka/consumer/recordsLag",
+              Set.of(CLIENT_ID_TAG, "topic", "partition"),
+              KafkaConsumerMetric.MetricType.GAUGE
+          ),
+          new KafkaConsumerMetric(
+              "records-per-request-avg",
+              "kafka/consumer/recordsPerRequestAvg",
+              Set.of(CLIENT_ID_TAG, "topic"),
+              KafkaConsumerMetric.MetricType.GAUGE
+          )
+      ).collect(Collectors.toMap(KafkaConsumerMetric::getKafkaMetricName, Function.identity()));
 
   private final KafkaConsumer<?, ?> consumer;
-  private final Map<String, AtomicLong> counters = new HashMap<>();
+  private final Map<MetricName, AtomicLong> counters = new HashMap<>();
 
   public KafkaConsumerMonitor(final KafkaConsumer<?, ?> consumer)
   {
@@ -60,18 +119,33 @@ public class KafkaConsumerMonitor extends AbstractMonitor
   {
     for (final Map.Entry<MetricName, ? extends Metric> entry : consumer.metrics().entrySet()) {
       final MetricName metricName = entry.getKey();
+      final KafkaConsumerMetric kafkaConsumerMetric = METRICS.get(metricName.name());
 
-      if (METRICS.containsKey(metricName.name()) && isTopicMetric(metricName)) {
-        final String topic = metricName.tags().get(TOPIC_TAG);
-        final long newValue = ((Number) entry.getValue().metricValue()).longValue();
-        final long priorValue =
-            counters.computeIfAbsent(metricName.name(), ignored -> new AtomicLong())
-                    .getAndSet(newValue);
+      if (kafkaConsumerMetric != null &&
+          kafkaConsumerMetric.getDimensions().equals(metricName.tags().keySet())) {
+        final Number newValue = (Number) entry.getValue().metricValue();
+        final Number emitValue;
 
-        if (newValue != priorValue) {
-          final ServiceMetricEvent.Builder builder =
-              new ServiceMetricEvent.Builder().setDimension(TOPIC_TAG, topic);
-          emitter.emit(builder.setMetric(METRICS.get(metricName.name()), newValue - priorValue));
+        if (kafkaConsumerMetric.getMetricType() == KafkaConsumerMetric.MetricType.GAUGE || newValue == null) {
+          emitValue = newValue;
+        } else if (kafkaConsumerMetric.getMetricType() == KafkaConsumerMetric.MetricType.COUNTER) {
+          final long newValueAsLong = newValue.longValue();
+          final long priorValue =
+              counters.computeIfAbsent(metricName, ignored -> new AtomicLong())
+                      .getAndSet(newValueAsLong);
+          emitValue = newValueAsLong - priorValue;
+        } else {
+          throw DruidException.defensive("Unexpected metric type[%s]", kafkaConsumerMetric.getMetricType());
+        }
+
+        if (emitValue != null && !Double.isNaN(emitValue.doubleValue())) {
+          final ServiceMetricEvent.Builder builder = new ServiceMetricEvent.Builder();
+          for (final String dimension : kafkaConsumerMetric.getDimensions()) {
+            if (!dimension.equals(CLIENT_ID_TAG)) {
+              builder.setDimension(dimension, metricName.tags().get(dimension));
+            }
+          }
+          emitter.emit(builder.setMetric(kafkaConsumerMetric.getDruidMetricName(), emitValue));
         }
       }
     }
@@ -82,13 +156,5 @@ public class KafkaConsumerMonitor extends AbstractMonitor
   public void stopAfterNextEmit()
   {
     stopAfterNext = true;
-  }
-
-  private static boolean isTopicMetric(final MetricName metricName)
-  {
-    // Certain metrics are emitted both as grand totals and broken down by topic; we want to ignore the grand total and
-    // only look at the per-topic metrics. See https://kafka.apache.org/documentation/#consumer_fetch_monitoring.
-    return TOPIC_METRIC_TAGS.equals(metricName.tags().keySet())
-           && !Strings.isNullOrEmpty(metricName.tags().get(TOPIC_TAG));
   }
 }
